# release-tools

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.in  requirements.txt
configs/: cookiecutter.yaml  gitconfig  invoke.yaml
cookies/bumpversion/: cookiecutter.json
cookies/bumpversion/{{cookiecutter.directory_name}}/: .bumpversion.cfg
cookies/pre-commit/: cookiecutter.json
cookies/pre-commit/{{ cookiecutter.project_name }}/: .pre-commit-config.yaml
cookies/reno/: cookiecutter.json
releasenotes/notes/: audit-8e29a74a7fdff136.yaml  base-image-ca09f8423e383e6a.yaml  black-565410c8e5dae485.yaml  bump-toml-1614348246aa0578.yaml  cookie-reno-add-notes-dir-2c268dbd0005cbdc.yaml  docker-hub-3ebd7ffcb5df9c04.yaml  pip-b99f3c1f93bfe1de.yaml  pipfile-9681865747d6e884.yaml  poetry-ac323c4767725213.yaml  pre-c-7aef0b37fea16970.yaml  pre-commit-540600cc4ae05c81.yaml  pre-commit-f44165c7c6427177.yaml  rst-check-a1360d1b23e3afee.yaml  v0.1.0-31a90f468c70f077.yaml  v0.1.1-7fac3bdc29c47804.yaml  v0.2.0-7a76c8a6168a41d6.yaml  v0.4.0-1d08eeafcf337b56.yaml  v6-97fc41f49282b1ba.yaml
tasks/: __init__.py  audit.py  git.py  notes.py  package.py  setup.py  version.py
