[tool.poetry]
name = "release-tools"
version = "0.4.2"
description = "Python Docker image with tools for the release process."
authors = ["Janto <janto@team.uber.space>"]

[tool.poetry.dependencies]
python = "^3.7"
bump2version = "^0.5.11"
cookiecutter = "^1.6"
invoke = "^1.3"
reno = "^2.11"
safety = "^1.8"
pre-commit = "^1.18"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
